--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta property="og:title" content="Lucie Ost, Digital Product Designer"/>
         <meta property="og:type" content="website"/>
         <meta property="og:description" content="I am a Principal Product Designer and Design Manager with extensive experience in designing enterprise products. Currently based in Dresden, Germany."/>
-        <meta property="og:image" content="https://iamlucie.com/assets/images/card.jpg?v=e0f67f7f"/>
+        <meta property="og:image" content="https://iamlucie.com/images/images/card.jpg?v=e0f67f7f"/>
         <meta property="og:image:type" content="image/jpeg"/>
         <meta property="og:image:width" content="1280"/>
         <meta property="og:image:height" content="800"/>
@@ -89,7 +89,7 @@
                                 <div>
                                     <div id="image02" class="image" data-position="center">
                                         <span class="frame">
-                                            <img src="assets/profile_image.jpg" alt="Lucie (she/her)"/>
+                                            <img src="images/profile_image.jpg" alt="Lucie (she/her)"/>
                                         </span>
                                     </div>
                                 </div>
@@ -148,7 +148,7 @@
                                 <div>
                                     <div id="image04" class="image full" data-position="center">
                                         <span class="frame">
-                                            <img src="assets/client_oracle.png?v=e0f67f7f" alt="Oracle NetSuite Product Foundations Design Team Banner"/>
+                                            <img src="images/client_oracle.png?v=e0f67f7f" alt="Oracle NetSuite Product Foundations Design Team Banner"/>
                                         </span>
                                     </div>
 
@@ -162,7 +162,7 @@
                                 <div>
                                     <div id="image06" class="image full" data-position="center">
                                         <span class="frame">
-                                            <img src="assets/client_kontent.jpg?v=e0f67f7f" alt="Illustration of a content writer working desk in 2017"/>
+                                            <img src="images/client_kontent.jpg?v=e0f67f7f" alt="Illustration of a content writer working desk in 2017"/>
                                         </span>
                                     </div>
                                 </div>
@@ -206,7 +206,7 @@
                                 <div>
                                     <div id="image05" class="image full">
                                         <span class="frame">
-                                            <img src="assets/client_kentico.jpg?v=e0f67f7f" alt=""/>
+                                            <img src="images/client_kentico.jpg?v=e0f67f7f" alt=""/>
                                         </span>
                                     </div>
                                 </div>
