--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html lang="en">
     <head>
         <title>Lucie Ost, Digital Product Designer</title>
+        <meta name="robots" content="noindex, nofollow">
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <meta name="color-scheme" content="light only"/>
