--- a/kontent_temp.html
+++ b/kontent_temp.html
@@ -12,7 +12,7 @@
     <a href="javascript:history.back()" class="sticky-back-btn" title="Go Back">←</a>
     <div class="container">
         <div class="case-study-block">
-        <img src="assets/images" alt="Case study as img" />
+        <img src="assets/images/kentico_cloud_cs.png" alt="Temporary case study in a form of an image." />
         </div>
         <div class="image-block" id="videoContainer1">
         <img src="assets/images/placeholder_video_kontent.png" alt="Click to play video" />
