--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <div>
                                     <div id="image02" class="image" data-position="center">
                                         <span class="frame">
-                                            <img src="images/profile_image.jpg" alt="Lucie (she/her)"/>
+                                            <img src="assets/images/profile_image.jpg" alt="Lucie (she/her)"/>
                                         </span>
                                     </div>
                                 </div>
@@ -149,7 +149,7 @@
                                 <div>
                                     <div id="image04" class="image full" data-position="center">
                                         <span class="frame">
-                                            <img src="images/client_oracle.png?v=e0f67f7f" alt="Oracle NetSuite Product Foundations Design Team Banner"/>
+                                            <img src="assets/images/client_oracle.png?v=e0f67f7f" alt="Oracle NetSuite Product Foundations Design Team Banner"/>
                                         </span>
                                     </div>
 
@@ -163,7 +163,7 @@
                                 <div>
                                     <div id="image06" class="image full" data-position="center">
                                         <span class="frame">
-                                            <img src="images/client_kontent.jpg?v=e0f67f7f" alt="Illustration of a content writer working desk in 2017"/>
+                                            <img src="assets/images/client_kontent.jpg?v=e0f67f7f" alt="Illustration of a content writer working desk in 2017"/>
                                         </span>
                                     </div>
                                 </div>
@@ -207,7 +207,7 @@
                                 <div>
                                     <div id="image05" class="image full">
                                         <span class="frame">
-                                            <img src="images/client_kentico.jpg?v=e0f67f7f" alt=""/>
+                                            <img src="assets/images/client_kentico.jpg?v=e0f67f7f" alt=""/>
                                         </span>
                                     </div>
                                 </div>
