Onest font - replacement

--- a/kentico.html
+++ b/kentico.html
@@ -5,13 +5,12 @@
   <title>Lucie Ost, Digital Product Designer</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="style_kentico.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
-  <link rel="preload" href="https://download.kentico.com/Assets/GT-Walsheim-Regular.woff" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="https://download.kentico.com/Assets/GT-Walsheim-Bold.woff" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="https://download.kentico.com/Assets/GT-Walsheim-Medium.woff" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="https://download.kentico.com/Assets/GT-Walsheim-Light.woff" as="font" type="font/woff2" crossorigin="anonymous">
 </head>
 <body>
     <!-- Sticky Close Button -->
